inserido titulo e parag index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
+  <head>
+    <title>meu primeiro github page</title>
+  </head>
   <body>
     <h1>Macacos</h1>
+    <p>Lorem</p>
   </body>
 </html>
