navegaçao entre contato e index

--- a/contato.html
+++ b/contato.html
@@ -6,6 +6,6 @@
         <h4>nome: Guilherme Schreiber</h4>
         <h4>email: guilhermeschreiber2007@gmail.com</h4>
         <h4>telefone: +55 47 99795-4971</h4>
-        <a href="index.html">inicio</a>
+        <a href="index.html">inicioo</a>
     </body>
 </html>
