--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <body>
     <h1>Macacos</h1>
     <p>Lorem</p>
-    <a href="contato.html">contato</a>
+    <a href="contato.html">contatoo</a>
   </body>
 </html>
